@@ -30,9 +30,9 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 import java.util.function.Function;
 
-import com.oracle.truffle.espresso.runtime.JavaVersion;
 import org.graalvm.nativeimage.ImageInfo;
 import org.graalvm.options.OptionCategory;
 import org.graalvm.options.OptionKey;
@@ -42,6 +42,7 @@ import org.graalvm.options.OptionType;
 
 import com.oracle.truffle.api.Option;
 import com.oracle.truffle.espresso.jdwp.api.JDWPOptions;
+import com.oracle.truffle.espresso.runtime.JavaVersion;
 
 @Option.Group(EspressoLanguage.ID)
 public final class EspressoOptions {
@@ -147,6 +148,12 @@ public final class EspressoOptions {
                     usageSyntax = "<module>" + PATH_SEPARATOR_INSERT + "<module>" + PATH_SEPARATOR_INSERT + "...") //
     public static final OptionKey<List<String>> AddOpens = new OptionKey<>(Collections.emptyList(), STRINGS_OPTION_TYPE);
 
+    @Option(help = "A '" + PATH_SEPARATOR_INSERT + "' separated list of modules that are permitted to perform restricted native operations.\\nEquivalent to '--enable-native-access=<module>'", //
+                    category = OptionCategory.USER, //
+                    stability = OptionStability.STABLE, //
+                    usageSyntax = "<module>" + PATH_SEPARATOR_INSERT + "<module>" + PATH_SEPARATOR_INSERT + "...") //
+    public static final OptionKey<List<String>> EnableNativeAccess = new OptionKey<>(Collections.emptyList(), STRINGS_OPTION_TYPE);
+
     @Option(help = "Installation directory for Java Runtime Environment (JRE).", //
                     category = OptionCategory.EXPERT, //
                     stability = OptionStability.STABLE, //
@@ -225,6 +232,12 @@ public final class EspressoOptions {
                     usageSyntax = "false|true") //
     public static final OptionKey<Boolean> EnableSystemAssertions = new OptionKey<>(false);
 
+    @Option(help = "Enable extended NullPointerException message.", //
+                    category = OptionCategory.USER, //
+                    stability = OptionStability.EXPERIMENTAL, //
+                    usageSyntax = "true|false") //
+    public static final OptionKey<Boolean> ShowCodeDetailsInExceptionMessages = new OptionKey<>(true);
+
     public static List<Path> parsePaths(String paths) {
         List<Path> list = new ArrayList<>();
         for (String path : splitByFileSeparator(paths)) {
@@ -250,7 +263,7 @@ public final class EspressoOptions {
         @Override
         public SpecComplianceMode apply(String s) {
             try {
-                return SpecComplianceMode.valueOf(s.toUpperCase());
+                return SpecComplianceMode.valueOf(s.toUpperCase(Locale.ROOT));
             } catch (IllegalArgumentException e) {
                 throw new IllegalArgumentException("--java.SpecCompliance: Mode can be 'strict' or 'hotspot'.");
             }
@@ -273,7 +286,7 @@ public final class EspressoOptions {
         @Override
         public VerifyMode apply(String s) {
             try {
-                return VerifyMode.valueOf(s.toUpperCase());
+                return VerifyMode.valueOf(s.toUpperCase(Locale.ROOT));
             } catch (IllegalArgumentException e) {
                 throw new IllegalArgumentException("-Xverify: Mode can be 'none', 'remote' or 'all'.");
             }
@@ -329,7 +342,7 @@ public final class EspressoOptions {
                 return LivenessAnalysisMode.NONE;
             }
             try {
-                return LivenessAnalysisMode.valueOf(s.toUpperCase());
+                return LivenessAnalysisMode.valueOf(s.toUpperCase(Locale.ROOT));
             } catch (IllegalArgumentException e) {
                 throw new IllegalArgumentException("--java.LivenessAnalysis can only be 'none'|'false', 'auto' or 'all'|'true'.");
             }
@@ -471,6 +484,12 @@ public final class EspressoOptions {
                     stability = OptionStability.EXPERIMENTAL, //
                     usageSyntax = "false|true") //
     public static final OptionKey<Boolean> Polyglot = new OptionKey<>(false);
+
+    @Option(help = "Enable built in polyglot collection support in Espresso.", //
+                    category = OptionCategory.EXPERT, //
+                    stability = OptionStability.EXPERIMENTAL, //
+                    usageSyntax = "false|true") //
+    public static final OptionKey<Boolean> BuiltInPolyglotCollections = new OptionKey<>(false);
 
     @Option(help = "Enable hotspot extension API.", //
                     category = OptionCategory.EXPERT, //
@@ -620,7 +639,7 @@ public final class EspressoOptions {
                         @Override
                         public JImageMode apply(String s) {
                             try {
-                                return JImageMode.valueOf(s.toUpperCase());
+                                return JImageMode.valueOf(s.toUpperCase(Locale.ROOT));
                             } catch (IllegalArgumentException e) {
                                 throw new IllegalArgumentException("JImage: Mode can be 'native', 'java'.");
                             }
@@ -630,6 +649,30 @@ public final class EspressoOptions {
     @Option(help = "Selects the jimage reader.", //
                     category = OptionCategory.EXPERT, stability = OptionStability.EXPERIMENTAL) //
     public static final OptionKey<JImageMode> JImage = new OptionKey<>(JImageMode.JAVA, JIMAGE_MODE_OPTION_TYPE);
+
+    @Option(help = "Enables preview features.", //
+                    category = OptionCategory.USER, //
+                    stability = OptionStability.STABLE, //
+                    usageSyntax = "false|true") //
+    public static final OptionKey<Boolean> EnablePreview = new OptionKey<>(false);
+
+    @Option(help = "Enables the WhiteBox API.", //
+                    category = OptionCategory.INTERNAL, //
+                    stability = OptionStability.EXPERIMENTAL, //
+                    usageSyntax = "false|true") //
+    public static final OptionKey<Boolean> WhiteBoxAPI = new OptionKey<>(false);
+
+    public enum GuestFieldOffsetStrategyEnum {
+        safety,
+        compact,
+        graal
+    }
+
+    @Option(help = "Guest field offset strategy. The safety strategy will help catch some wrong usages of the unsafe API.", //
+                    category = OptionCategory.INTERNAL, //
+                    stability = OptionStability.EXPERIMENTAL, //
+                    usageSyntax = "safety|compact|graal") //
+    public static final OptionKey<GuestFieldOffsetStrategyEnum> GuestFieldOffsetStrategy = new OptionKey<>(GuestFieldOffsetStrategyEnum.safety);
 
     // These are host properties e.g. use --vm.Despresso.DebugCounters=true .
     public static final boolean DebugCounters = booleanProperty("espresso.DebugCounters", false);
